--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "prototype",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc --project ./",
     "start:prod": "node ./dist/index.js",
     "build_and_start": "npm run build && npm run start:prod",
     "start": "nodemon --watch . -e ts --ignore ./client/ --ignore ./dist/ --exec npm run build_and_start",
+    "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,12 +16,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "nodemon": "^2.0.7",
+    "pg-promise": "^10.10.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.3.0",
-    "nodemon": "^2.0.10",
     "typescript": "^4.3.5"
   }
 }
